# pagina_dj

./: Cargo.toml  README.md  Trunk.toml  index.html  main.rs
backend/: Cargo.toml
backend/src/: auth.rs  main.rs
pages/: home.rs  servicios.rs
src/: main.rs  style.css
src/components/: nav.rs
src/pages/: admin.rs  cabinas.rs  home.rs  login.rs  servicios.rs
