[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
mongodb = "3.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = "9.3.1"
argon2 = { version = "0.6.0-rc.8", features = ["password-hash"] }
password-hash = { version = "0.6", features = ["rand_core"] }
dotenvy = "0.15"
tower-http = { version = "0.6.10", features = ["cors"] }
rand_core = "0.9.5"
rand = "0.8"